--- a/index.html
+++ b/index.html
@@ -403,13 +403,13 @@
 }
 
 const phrases = [
-  'Yes, I am a criminal.',
-  'My crime is that of curiosity.',
-  'My crime is that of judging people by what they say and think, not what they look like.',
+  'Yes, I am a Oggy.',
+  'I can ruin your system.',
+  'Never judge a people by what they say and think, not what they look like.',
   'My crime is that of outsmarting you, something that you will never forgive me for.',
-  'I am a hacker, and this is my manifesto.',
-  'You may stop this individual, but you cant stop us all...',
-  'after all, were all alike.'
+  'I am a hacker, and i will stop you.',
+  'Secure your site...',
+  'after all, this your last chance.'
 ]
 
 const el = document.querySelector('.text')
