--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 }
 
 const phrases = [
-  'Yes, I am a Oggy.',
+  'Yes, I am Peaky Oggy.',
   'I can ruin your system.',
   'Never judge a people by what they say and think, not what they look like.',
   'My crime is that of outsmarting you, something that you will never forgive me for.',
