--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ next()
 
 var app = {
 
-  chars: ['PureHackers','Unleashed','127.0.0.1','1337','0x523344','Localhost','Cr4sH CoD3','HACKED!','Security','Breached!','System'],
+  chars: ['Yes I am','Go to Hell','|>[-/-\|<`/ [](_+(_+`/','1337','0x523344','PO','p34ky 099y','HACKED!','Security','|*34X7 0997','System'],
 
   init: function () {
     app.container = document.createElement('div');
